# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")

ohos_fuzztest("DaemonStubFuzzTest") {
  module_out_path = "distributed_file_system/dfs_service_deamon"
  fuzz_config_file = "${distributedfile_path}/test/fuzztest/daemonstub_fuzzer"
  include_dirs = [
    "${distributedfile_path}/services/distributedfiledaemon/include",
    "${distributedfile_path}/services/distributedfiledaemon/include/ipc",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "${distributedfile_path}/services/distributedfiledaemon/src/ipc/dm_device_info_ext.cpp",
    "${distributedfile_path}/test/fuzztest/daemonstub_fuzzer/daemonstub_fuzzer.cpp",
  ]
  defines = [ "DFS_LOG_TAG = \"dfs_service\"" ]
  deps = [
    "${services_path}/distributedfiledaemon:distributed_file_daemon_kit_inner",
    "${services_path}/distributedfiledaemon:idaemon_base_source",
    "${utils_path}:libdistributedfileutils",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":DaemonStubFuzzTest" ]
}
