# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")
ohos_fuzztest("FfrtTimerFuzzTest") {
  module_out_path = "dfs_service/dfs_service"
  fuzz_config_file = "${distributedfile_path}/test/fuzztest/ffrttimer_fuzzer"
  include_dirs = [
    "${distributedfile_path}/test/fuzztest/fuzz_common",
    "${utils_path}/inner_api",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-flto",
    "-fvisibility=hidden",
    "--coverage",
  ]
  ldflags = [
    "-flto",
    "--coverage",
  ]
  sources = [ "${distributedfile_path}/test/fuzztest/ffrttimer_fuzzer/ffrttimer_fuzzer.cpp" ]

  deps = [ "${utils_path}:libdistributedfileutils_lite" ]

  external_deps = [
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":FfrtTimerFuzzTest" ]
}
