# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")

ohos_fuzztest("FileTransListenerStubFuzzTest") {
  module_out_path = "dfs_service/dfs_service"
  fuzz_config_file =
      "${dfs_service_path}/test/fuzztest/filetranslistenerstub_fuzzer"
  include_dirs = [
    "include",
    "include/network/softbus",
    "//third_party/json/include",
    "${dfs_service_path}/frameworks/native/distributed_file_inner/include",
    "${dfs_service_path}/services/distributedfiledaemon/include/ipc",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "${dfs_service_path}/test/fuzztest/filetranslistenerstub_fuzzer/filetranslistenerstub_fuzzer.cpp" ]

  defines = [ "DFS_LOG_TAG = \"dfs_service\"" ]
  deps = [
    "${bundlemanager_framework_path}/services/bundlemgr:libbms",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "common_event_service:cesfwk_innerkits",
    "init:libbegetutil",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":FileTransListenerStubFuzzTest" ]
}
