# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")
ohos_fuzztest("OHCloudDiskManagerNDKFuzzTest") {
  module_out_path = "dfs_service/dfs_service"
  fuzz_config_file =
      "${distributedfile_path}/test/fuzztest/ohclouddiskmanagerndk_fuzzer"
  include_dirs = [
    "${distributedfile_path}/interfaces/kits/ndk/clouddiskmanager/include",
    "${distributedfile_path}/test/fuzztest/fuzz_common",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-flto",
    "-fvisibility=hidden",
    "-Dprivate=public",
    "--coverage",
  ]
  ldflags = [
    "-flto",
    "--coverage",
  ]
  sources = [ "${distributedfile_path}/test/fuzztest/ohclouddiskmanagerndk_fuzzer/ohclouddiskmanagerndk_fuzzer.cpp" ]

  deps = [
    "${distributedfile_path}/interfaces/kits/ndk/clouddiskmanager/src:ohclouddiskmanager",
    "${innerkits_native_path}/clouddiskservice_kit_inner:clouddiskservice_kit_inner",
    "${utils_path}:libdistributedfileutils_lite",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "user_file_service:cloud_disk_manager_kit",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":OHCloudDiskManagerNDKFuzzTest" ]
}
